--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <br>
         <from>
             <label for="fname">Nom></label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fnom" name="fnom"><br>
             <label for="fprenom">Prénom></label><br>
             <input type="text" id="fprenom" name="fprenom"><br>
             <label for="Numero">Numero de Telephone></label><br>
-            <input type="text" id="num" name="num"><br>
-            <label for="fname">Nom></label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fnum" name="fnum"><br>
+            <label for="fname">email></label><br>
+            <input type="text" id="fmail" name="fmail"><br>
         </from>
         <div class="envoi">
 	        <input type="submit" class="envoi" value="Envoyer" />
@@ -23,3 +23,4 @@
         </div>
     </body>
     </html>
+
