--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>demandes de contacts Nuno</title>
+    <link rel="stylesheet" href="style.css">
+
 <html>
     <head>
         <meta charset="utf-8">
