--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h1>Contact</h1>
         <br>
         <from>
-            <label for="fname">Nom></label><br>
+            <label for="fname">Nom</label><br>
             <input type="text" id="fnom" name="fnom"><br>
-            <label for="fprenom">Prénom></label><br>
+            <label for="fprenom">Prénom</label><br>
             <input type="text" id="fprenom" name="fprenom"><br>
-            <label for="Numero">Numero de Telephone></label><br>
+            <label for="Numero">Numero de Telephone</label><br>
             <input type="text" id="fnum" name="fnum"><br>
-            <label for="fname">email></label><br>
+            <label for="fname">email</label><br>
             <input type="text" id="fmail" name="fmail"><br>
         </from>
         <div class="envoi">
@@ -29,5 +29,6 @@
         </div>
     </body>
     </html>
+
 
 
